form input done

--- a/HTML5 CSS3 and Bootstrap 4 Web Development/style.css
+++ b/HTML5 CSS3 and Bootstrap 4 Web Development/style.css
@@ -2,3 +2,13 @@ p{
     text-color:brown;
     background-color: antiquewhite;
 }
+h3{
+    text-align: center;
+}
+form{
+    text-align: center;
+}
+
+input{
+    padding: 10px
+}
